<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eyeapp2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--全局相关字符-->
    <string name="global_loading">加载中...</string>

    <!--title-->
    <string name="title_test">视力测试</string>
    <string name="title_person">个人中心</string>
    <string name="title_knowledge">知识库</string>
    <string name="title_blurayfilt">蓝光过滤</string>
    <string name="title_eyedata">用眼数据</string>

    <!--footer_btn（底部栏按钮）文字-->
    <string name="footer_btn_test">视力测试</string>
    <string name="footer_btn_person">个人中心</string>
    <string name="footer_btn_knowledge">知识库</string>
    <string name="footer_btn_blurayfilt">蓝光过滤</string>
    <string name="footer_btn_eyedata">用眼数据</string>

    <!--上面标题栏按钮的文字-->
    <string name="title_btn_return">返回</string>
    <string name="title_btn_confirm">确认</string>

    <!--登录注册界面-->
    <string name="login_userNameEditText_hint">请输入用户名</string>
    <string name="login_pwdEditText_hint">请输入密码</string>
    <string name="login_title">用户登录</string>
    <string name="title_register">用户注册</string>

    <!--忘记密码-->
    <string name="forget_pass_phone">手机</string>
    <string name="title_forget_pass">找回密码</string>
    <string name="forget_pass_newpass">新密码</string>
    <string name="forget_pass_checkcode">验证码</string>

    <!--测试界面-->
    <string name="test_colorbind">色盲检测</string>
    <string name="test_astigmatism">散光检测</string>
    <string name="test_vision">明视测试</string>
    <string name="test_sensitivity">敏感度测试</string>
    <string name="test_vision_title">在平放好手机后，点击选择您要测试的眼睛</string>
    <string name="test_colorbind_result">色盲测试结果</string>
    <string name="test_astigmatism_result">散光测试结果</string>
    <string name="test_sensitivity_result">敏感度测试结果</string>
    <string name="test_vision_result">明视测试结果</string>
    <string name="test_result_truerate">答题正确率：</string>
    <string name="test_result">测试结果：</string>
    <string name="test_result_eye">测试的眼睛：</string>
    <string name="test_vision_num">视力：</string>
    <string name="left_eye">左眼</string>
    <string name="right_eye">右眼</string>
    <string name="test_result_normal">正常</string>
    <string name="test_result_little">轻微</string>
    <string name="test_result_medium">一定程度</string>
    <string name="test_result_serious">较严重</string>
    <string name="test_vision_result_normal">视力正常</string>
    <string name="test_vision_result_little">轻微近视</string>
    <string name="test_vision_result_medium">一定程度近视</string>
    <string name="test_vision_result_serious">近视较严重</string>
    <string name="test_vision_distanceinput">请输入手机和您的距离(cm),为了保证图标显示效果，请输入50-100之间数字</string>
    <string name="test_result_good">良好</string>
    <string name="test_result_verygood">优秀</string>
    <string name="test_result_btn_submit">提交测试结果</string>
    <string name="test_result_btn_retest">重新测试</string>
    <string name="test_result_description">以上结果仅供参考，若要更科学、准确的测试结果请到专业机构进行测试！</string>
    <string name="test_result_sensitivity_description">注：眼睛识别度最高为100！</string>
    <string name="test_result_vision_description">注：眼睛视力范围为4.0-5.0！</string>

    <!--个人中心页面文字-->
    <string name="person_centre_info">个人资料</string>
    <string name="person_centre_eye">用眼情况</string>
    <string name="person_centre_train">眼部训练记录</string>
    <string name="person_centre_communication">专家交流记录</string>
    <string name="person_centre_message">消息中心</string>

    <!--知识库-->
    <string name="knowledge_eathabit">饮食习惯</string>
    <string name="knowledge_blog">护眼博客</string>
    <string name="knowledge_lecture">护眼讲座</string>
    <string name="knowledge_advisory">我要提问</string>
    <string name="knowledge_paperdetail">文章详情</string>
    <string name="knowledge_paperdetail_viewcount">浏览量：</string>
    <string name="knowledge_advisory_question_title">问题标题</string>
    <string name="knowledge_advisory_question_title_hint">请入问题标题</string>
    <string name="knowledge_advisory_question_content">问题内容</string>
    <string name="knowledge_advisory_question_content_hint">请入问题详细描述</string>
    <string name="knowledge_advisory_question_btn">提交问题</string>

    <!--用眼数据-->
    <string name="eyedata_bar_title">开屏时长与待机时长之比</string>
    <string name="eyedata_bar_todaytime">今日时长：</string>
    <string name="eyedata_bar_thistime">本次时长：</string>
    <string name="eyedata_bar_openscreen">开屏次数：</string>
    <string name="eyedata_bar_indoor">室内：</string>
    <string name="eyedata_bar_outdoor">室外：</string>

    <!--个人中心-->
    <string name="menu_settings">Settings</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
