<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <!--自定义的标题栏-->
        <LinearLayout
            android:id="@+id/layout_titlebar"
            style="@style/title">
            <TextView
                android:id="@+id/button_backward"
                style="@style/title_btn"
                android:visibility="visible"
                android:onClick="titleReturn"
                android:text="@string/title_btn_return"/>

            <TextView
                android:id="@+id/text_title"
                style="@style/title_title"
                android:text="@string/title_test"
                android:textColor="@color/title_title" />

            <TextView
                android:id="@+id/button_forward"
                android:visibility="invisible"
                style="@style/title_btn"
                android:text="@string/title_btn_confirm"/>

        </LinearLayout>


        <TextView
        style="@style/knowledge_advisory_label"
        android:text="@string/knowledge_advisory_question_title"/>
        <LinearLayout
            style="@style/knowledge_advisory_input">
            <EditText
                android:id="@+id/knowledge_advisory_input_title"
                style="@style/knowledge_advisory_input_edittext"
                android:minLines="1"
                android:hint="@string/knowledge_advisory_question_title_hint"/>
        </LinearLayout>
        <TextView
            style="@style/knowledge_advisory_label"
            android:text="@string/knowledge_advisory_question_content"/>
        <LinearLayout
            style="@style/knowledge_advisory_input">
            <EditText
                style="@style/knowledge_advisory_input_edittext"
                android:id="@+id/knowledge_advisory_input_content"
                android:hint="@string/knowledge_advisory_question_content_hint"/>
        </LinearLayout>
        <Button
            style="@style/global_btn"
            android:onClick="submit"
            android:layout_margin="20dp"
            android:text="@string/knowledge_advisory_question_btn"/>
    </LinearLayout>
</ScrollView>