<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/footer_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!-- android:background="@drawable/bk_footer" -->
        <RadioButton
            android:id="@+id/radio_test"
            style="@style/footer_btn"
            android:checked="true"
            android:drawableTop="@drawable/footer_btn_test_selector"
            android:text="@string/footer_btn_test" />

        <RadioButton
            android:id="@+id/radio_person"
            style="@style/footer_btn"
            android:drawableTop="@drawable/footer_btn_person_selector"
            android:text="@string/footer_btn_person" />

        <RadioButton
            android:id="@+id/radio_knowledge"
            style="@style/footer_btn"
            android:drawableTop="@drawable/footer_btn_knowledge_selector"
            android:text="@string/footer_btn_knowledge" />
        <RadioButton
            android:id="@+id/radio_blurayfilt"
            style="@style/footer_btn"
            android:drawableTop="@drawable/footer_btn_blurayfilt_selector"
            android:text="@string/footer_btn_blurayfilt" />

    </RadioGroup>

</LinearLayout>