<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/eyedata">
        <LinearLayout
            style="@style/eyedata_bar_title"
            android:orientation="vertical">
            <TextView
                style="@style/eyedata_bar_title_content"
                android:text="@string/eyedata_bar_title"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/eyedata_bar_arc_rl"
            style="@style/eyedata_bar"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/eyedata_bar_arc"
                style="@style/eyedata_bar"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp">
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/global_label"
                android:layout_centerInParent="true"
                android:layout_marginTop="30dp"
                android:text="10:36"/>
            <TextView
                android:id="@+id/eyedata_bar_arc_round"
                style="@style/eyedata_bar_arc_round"/>
        </RelativeLayout>
        <LinearLayout
            style="@style/eyedata_bar" >
            <TextView
                style="@style/eyedata_bar_label"
                android:text="@string/eyedata_bar_todaytime"/>
            <TextView
                style="@style/eyedata_bar_label"
                android:text="1小时12分钟"/>

        </LinearLayout>
        <View style="@style/eyedata_bar_line"/>
        <LinearLayout
            style="@style/eyedata_bar" >
            <TextView
                style="@style/eyedata_bar_label"
                android:text="@string/eyedata_bar_thistime"/>
            <TextView
                style="@style/eyedata_bar_label"
                android:text="1小时12分钟"/>

        </LinearLayout>
        <View style="@style/eyedata_bar_line"/>
        <LinearLayout
            style="@style/eyedata_bar" >
            <TextView
                style="@style/eyedata_bar_label"
                android:text="@string/eyedata_bar_openscreen"/>
            <TextView
                style="@style/eyedata_bar_label"
                android:text="2233次"/>

        </LinearLayout>
        <View style="@style/eyedata_bar_line"/>
        <LinearLayout
            style="@style/eyedata_bar" >
            <ImageView
                style="@style/eyedata_bar_icon"
                android:src="@mipmap/eyedata_bar_indoor"/>
            <TextView
                style="@style/eyedata_bar_label"
                android:text="@string/eyedata_bar_indoor"/>
            <TextView
                style="@style/eyedata_bar_label"
                android:text="13小时13分11秒"/>

        </LinearLayout>
        <View style="@style/eyedata_bar_line"/>
        <LinearLayout
            style="@style/eyedata_bar" >
            <ImageView
                style="@style/eyedata_bar_icon"
                android:src="@mipmap/eyedata_bar_outdoor"/>
            <TextView
                style="@style/eyedata_bar_label"
                android:text="@string/eyedata_bar_outdoor"/>
            <TextView
                style="@style/eyedata_bar_label"
                android:text="13小时13分11秒"/>

        </LinearLayout>
        <View style="@style/eyedata_bar_line"/>

    </LinearLayout>
</LinearLayout>