<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent">
    <!--自定义的标题栏-->
    <LinearLayout
        android:id="@+id/layout_titlebar"
        style="@style/title">
        <Button
            android:id="@+id/button_backward"
            style="@style/title_btn"
            android:visibility="invisible"
            android:text="@string/title_btn_return"/>

        <TextView
            android:id="@+id/text_title"
            style="@style/title_title"
            android:text="@string/title_forget_pass"
            android:textColor="@color/title_title" />

        <Button
            android:id="@+id/button_forward"
            android:visibility="invisible"
            style="@style/title_btn"
            android:text="@string/title_btn_confirm"/>

    </LinearLayout>
    <!--忘记密码页面的布局和登录界面的布局一样，所以直接引用登录界面的style-->
    <LinearLayout style="@style/login_inputBar"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/login_label"
            android:text="@string/forget_pass_phone" />

        <EditText
            android:id="@+id/register_nickName"
            style="@style/login_textEdit"
            android:hint="请输入手机号" />
    </LinearLayout>
    <View style="@style/global_line"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"/>
    <LinearLayout style="@style/login_inputBar">

        <TextView
            style="@style/login_label"
            android:layout_weight="2"
            android:text="验证码" />
        <EditText
            android:id="@+id/register_checkCode"
            style="@style/login_textEdit"
            android:layout_weight="4"
            android:gravity="center"
            android:hint="请输入验证码" />
        <Button
            style="@style/global_btn"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="25dp"
            android:text="获取验证码"
            android:textSize="10dp"
            android:layout_gravity="right"
            android:onClick="getCheckCode"/>

    </LinearLayout>
    <View style="@style/global_line"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"/>
    <LinearLayout style="@style/login_inputBar">

        <TextView
            style="@style/login_label"
            android:layout_weight="2"
            android:text="@string/forget_pass_newpass" />
        <EditText
            android:id="@+id/forget_pass_pwd"
            android:inputType="textPassword"
            style="@style/login_textEdit"
            android:hint="请输入新密码" />
        <TextView
            android:layout_width="wrap_content"
            android:drawableRight="@mipmap/login_pwd_show"
            android:layout_height="match_parent"
            android:onClick="showPwd"/>
    </LinearLayout>
    <View style="@style/global_line"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"/>
    <LinearLayout style="@style/login_inputBar">
        <Button
            android:id="@+id/login_btn"
            style="@style/global_btn"
            android:text="提交新密码"
            android:onClick="register"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"/>

    </LinearLayout>

</LinearLayout>
